--- a/example/equations.tex
+++ b/example/equations.tex
@@ -8,13 +8,23 @@
 % [FILE NAME] equations.tex
 % [FILE DESC] ___edit_description_here___
 % [FILE REVISION HISTORY]
-%  - Last Modified: 3/22/2019, 11:46:26
+%  - Last Modified: 3/29/2019, 1:59:07
 %  - Created Date: 3/19/2019, 16:50:30
 %   
 %   
 %   Please visit http://chenzhang.org for more information about the author
 %   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% NDVI
+\begin{equation}
+    NDVI = \frac{NIR-Red} {NIR+Red}
+\end{equation}
+
+% NDWI
+\begin{equation}
+    NDWI = \frac{Green-NIR} {Green+NIR}
+\end{equation}
 
 % Kappa
 \begin{equation}
