--- a/example/figures.tex
+++ b/example/figures.tex
@@ -8,7 +8,7 @@
 % [FILE NAME] figures.tex
 % [FILE DESC] ___edit_description_here___
 % [FILE REVISION HISTORY]
-%  - Last Modified: 3/22/2019, 11:46:25
+%  - Last Modified: 3/29/2019, 0:30:59
 %  - Created Date: 3/19/2019, 16:49:15
 %   
 %   
@@ -19,7 +19,7 @@
 
 % |   |
 % {CAP}
-\begin{figure}[!htb]\ContinuedFloat 
+\begin{figure}[!htb] 
     \begin{subfigure}[t]{\textwidth}
         \centering
         \includegraphics[width=\textwidth]{img/fig}
@@ -36,7 +36,7 @@
 % {CAP}
 \begin{figure}[!htb]
     % 1st row
-    \begin{subfigure}[t]{\textwidth}
+    \begin{subfigure}[t]{0.5\textwidth}
         \centering
         \includegraphics[width=\textwidth]{img/fig-a}
         \caption{fig-a}\label{fig:fig-a}
