--- a/template-elsevier.tex
+++ b/template-elsevier.tex
@@ -11,7 +11,7 @@
 % [FILE NAME] template-elsevier.tex
 % [FILE DESC] ___edit_description_here___
 % [FILE REVISION HISTORY]
-%  - Last Modified: 3/22/2019, 12:07:05
+%  - Last Modified: 4/09/2019, 23:20:07
 %  - Created Date: 3/21/2019, 3:13:32
 %   
 %   
@@ -38,7 +38,7 @@
 %                                   PACKAGES                                   %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[utf8]{inputenc}
-\usepackage{hyperref} % link
+\usepackage[draft]{hyperref} % link
 \usepackage{lineno} % linenumbers
 \usepackage{subcaption}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
